2008-10-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	Added signal "dir-changed" (GnomeCmdFileList -> GnomeCmdFileSelector)

2008-10-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-selector.cc:
	Invalidate modified file metatada by GnomeCmdDir, not by GnomeCmdFileSelector

	* src/gnome-cmd-file-selector.cc:
	Remove surplus assertions

	* src/gnome-cmd-user-actions.cc:
	Do not assign CTRL+T as a default shortcut to advrename

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	Rename signal "selection-changed" -> "files-changed"

2008-10-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/viewer-window.cc:
	Internal viewer: view metatags with both t/T shortcuts

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-types.h:
	New colour theme: cafezinho

2008-10-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/viewer-window.cc:
	Internal viewer - support for metadata tags

	* src/intviewer/viewer-window.cc:
	Internal viewer - new key bindings: T and ALT+ENTER for metadata tags viewing

2008-10-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/*.cc:
	C++: add 'using namespace std'

	* src/gnome-cmd-combo.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-dir-indicator.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/utils.cc:
	GnomeCmdData: more C++ rework

2008-10-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	Add GnomeCmdFileSelector::is_active()

	* src/intviewer/viewer-window.cc:
	intviewer: kill obsoleted code for external tools

	* src/Makefile.am:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-remote-dialog.cc:
	* src/gnome-cmd-treeview.cc:
	* src/gnome-cmd-treeview.h: